--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,15 +19,15 @@ variables:
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
-
+pool:
+  name: 'azureagent'
 stages:
 - stage: Build
   displayName: Build stage
   jobs:
   - job: MavenPackageAndPublishArtifacts
     displayName: Maven Package and Publish Artifacts
-    pool:
-      vmImage: $(vmImageName)
+    
 
     steps:
     - task: Maven@4
