--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,15 +20,14 @@ variables:
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
 pool:
-  name: 'azureagent'
+  name: 'Default'
+
 stages:
 - stage: Build
   displayName: Build stage
   jobs:
   - job: MavenPackageAndPublishArtifacts
     displayName: Maven Package and Publish Artifacts
-    
-
     steps:
     - task: Maven@4
       displayName: 'Maven Package'
@@ -60,8 +59,6 @@ stages:
   - deployment: DeployLinuxWebApp
     displayName: Deploy Linux Web App
     environment: $(environmentName)
-    pool:
-      vmImage: $(vmImageName)
     strategy:
       runOnce:
         deploy:
